--- a/embed.plist
+++ b/embed.plist
@@ -1,11 +1,10 @@
-
-		<dict>
+<dict>
 			<key>WFWorkflowActionIdentifier</key>
 			<string>is.workflow.actions.repeat.count</string>
 			<key>WFWorkflowActionParameters</key>
 			<dict>
 				<key>GroupingIdentifier</key>
-				<string>94647DA5-5276-4CCA-8316-9AD497879229</string>
+				<string>01E84062-ADCC-4D52-8225-00AE8B0DBCF4</string>
 				<key>WFControlFlowMode</key>
 				<integer>0</integer>
 			</dict>
@@ -26,6 +25,8 @@ Make sure to update Version every time you update your shortcut.</string>
 			<string>is.workflow.actions.dictionary</string>
 			<key>WFWorkflowActionParameters</key>
 			<dict>
+				<key>UUID</key>
+				<string>2C4C2931-9424-424F-AC4C-29319424124F</string>
 				<key>WFItems</key>
 				<dict>
 					<key>Value</key>
@@ -100,6 +101,20 @@ Make sure to update Version every time you update your shortcut.</string>
 			<string>is.workflow.actions.setvariable</string>
 			<key>WFWorkflowActionParameters</key>
 			<dict>
+				<key>WFInput</key>
+				<dict>
+					<key>Value</key>
+					<dict>
+						<key>OutputName</key>
+						<string>Dictionary</string>
+						<key>OutputUUID</key>
+						<string>2C4C2931-9424-424F-AC4C-29319424124F</string>
+						<key>Type</key>
+						<string>ActionOutput</string>
+					</dict>
+					<key>WFSerializationType</key>
+					<string>WFTextTokenAttachment</string>
+				</dict>
 				<key>WFVariableName</key>
 				<string>LocalData</string>
 			</dict>
@@ -108,15 +123,32 @@ Make sure to update Version every time you update your shortcut.</string>
 			<key>WFWorkflowActionIdentifier</key>
 			<string>is.workflow.actions.getipaddress</string>
 			<key>WFWorkflowActionParameters</key>
-			<dict/>
+			<dict>
+				<key>UUID</key>
+				<string>2D415533-D3A4-40F4-AD41-5533D3A440F4</string>
+			</dict>
 		</dict>
 		<dict>
 			<key>WFWorkflowActionIdentifier</key>
 			<string>is.workflow.actions.count</string>
 			<key>WFWorkflowActionParameters</key>
 			<dict>
-				<key>WFCountType</key>
-				<string>Items</string>
+				<key>Input</key>
+				<dict>
+					<key>Value</key>
+					<dict>
+						<key>OutputName</key>
+						<string>Current IP Address</string>
+						<key>OutputUUID</key>
+						<string>2D415533-D3A4-40F4-AD41-5533D3A440F4</string>
+						<key>Type</key>
+						<string>ActionOutput</string>
+					</dict>
+					<key>WFSerializationType</key>
+					<string>WFTextTokenAttachment</string>
+				</dict>
+				<key>UUID</key>
+				<string>A0759E56-B2DD-401A-8A8F-09672AA3AC44</string>
 			</dict>
 		</dict>
 		<dict>
@@ -125,13 +157,32 @@ Make sure to update Version every time you update your shortcut.</string>
 			<key>WFWorkflowActionParameters</key>
 			<dict>
 				<key>GroupingIdentifier</key>
-				<string>a8bf81ea-8943-4228-adbd-6cfb55014f93</string>
+				<string>1FA8C12A-34A0-4532-9ED0-831E2194E517</string>
 				<key>WFCondition</key>
-				<string>Equals</string>
-				<key>WFConditionalActionString</key>
-				<string>0</string>
+				<integer>4</integer>
 				<key>WFControlFlowMode</key>
 				<integer>0</integer>
+				<key>WFInput</key>
+				<dict>
+					<key>Type</key>
+					<string>Variable</string>
+					<key>Variable</key>
+					<dict>
+						<key>Value</key>
+						<dict>
+							<key>OutputName</key>
+							<string>Count</string>
+							<key>OutputUUID</key>
+							<string>A0759E56-B2DD-401A-8A8F-09672AA3AC44</string>
+							<key>Type</key>
+							<string>ActionOutput</string>
+						</dict>
+						<key>WFSerializationType</key>
+						<string>WFTextTokenAttachment</string>
+					</dict>
+				</dict>
+				<key>WFNumberValue</key>
+				<string>0</string>
 			</dict>
 		</dict>
 		<dict>
@@ -149,7 +200,7 @@ Make sure to update Version every time you update your shortcut.</string>
 			<key>WFWorkflowActionParameters</key>
 			<dict>
 				<key>GroupingIdentifier</key>
-				<string>a8bf81ea-8943-4228-adbd-6cfb55014f93</string>
+				<string>1FA8C12A-34A0-4532-9ED0-831E2194E517</string>
 				<key>WFControlFlowMode</key>
 				<integer>1</integer>
 			</dict>
@@ -159,6 +210,8 @@ Make sure to update Version every time you update your shortcut.</string>
 			<string>is.workflow.actions.url</string>
 			<key>WFWorkflowActionParameters</key>
 			<dict>
+				<key>UUID</key>
+				<string>E7B70352-AA67-4A00-A7B7-0352AA678A00</string>
 				<key>WFURLActionURL</key>
 				<dict>
 					<key>Value</key>
@@ -169,12 +222,6 @@ Make sure to update Version every time you update your shortcut.</string>
 							<dict>
 								<key>Aggrandizements</key>
 								<array>
-									<dict>
-										<key>CoercionItemClass</key>
-										<string>WFDictionaryContentItem</string>
-										<key>Type</key>
-										<string>WFCoercionVariableAggrandizement</string>
-									</dict>
 									<dict>
 										<key>DictionaryKey</key>
 										<string>ID</string>
@@ -202,44 +249,30 @@ Make sure to update Version every time you update your shortcut.</string>
 			<key>WFWorkflowActionParameters</key>
 			<dict>
 				<key>CustomOutputName</key>
-				<string>Remote</string>
+				<string>result</string>
 				<key>UUID</key>
 				<string>a585622f-3b7c-4273-a3a5-771a5fbfba5a</string>
-			</dict>
-		</dict>
-		<dict>
-			<key>WFWorkflowActionIdentifier</key>
-			<string>is.workflow.actions.getvariable</string>
-			<key>WFWorkflowActionParameters</key>
-			<dict>
-				<key>WFVariable</key>
+				<key>WFURL</key>
 				<dict>
 					<key>Value</key>
 					<dict>
-						<key>Aggrandizements</key>
-						<array>
+						<key>attachmentsByRange</key>
+						<dict>
+							<key>{0, 1}</key>
 							<dict>
-								<key>CoercionItemClass</key>
-								<string>WFDictionaryContentItem</string>
+								<key>OutputName</key>
+								<string>URL</string>
+								<key>OutputUUID</key>
+								<string>E7B70352-AA67-4A00-A7B7-0352AA678A00</string>
 								<key>Type</key>
-								<string>WFCoercionVariableAggrandizement</string>
+								<string>ActionOutput</string>
 							</dict>
-							<dict>
-								<key>DictionaryKey</key>
-								<string>result</string>
-								<key>Type</key>
-								<string>WFDictionaryValueVariableAggrandizement</string>
-							</dict>
-						</array>
-						<key>OutputName</key>
-						<string>Remote</string>
-						<key>OutputUUID</key>
-						<string>a585622f-3b7c-4273-a3a5-771a5fbfba5a</string>
-						<key>Type</key>
-						<string>ActionOutput</string>
+						</dict>
+						<key>string</key>
+						<string>￼</string>
 					</dict>
 					<key>WFSerializationType</key>
-					<string>WFTextTokenAttachment</string>
+					<string>WFTextTokenString</string>
 				</dict>
 			</dict>
 		</dict>
@@ -251,11 +284,39 @@ Make sure to update Version every time you update your shortcut.</string>
 				<key>GroupingIdentifier</key>
 				<string>0db09b8a-edc4-4bad-9a6b-8ece302669a0</string>
 				<key>WFCondition</key>
-				<string>Equals</string>
+				<integer>99</integer>
 				<key>WFConditionalActionString</key>
 				<string>success</string>
 				<key>WFControlFlowMode</key>
 				<integer>0</integer>
+				<key>WFInput</key>
+				<dict>
+					<key>Type</key>
+					<string>Variable</string>
+					<key>Variable</key>
+					<dict>
+						<key>Value</key>
+						<dict>
+							<key>Aggrandizements</key>
+							<array>
+								<dict>
+									<key>CoercionItemClass</key>
+									<string>WFStringContentItem</string>
+									<key>Type</key>
+									<string>WFCoercionVariableAggrandizement</string>
+								</dict>
+							</array>
+							<key>OutputName</key>
+							<string>result</string>
+							<key>OutputUUID</key>
+							<string>a585622f-3b7c-4273-a3a5-771a5fbfba5a</string>
+							<key>Type</key>
+							<string>ActionOutput</string>
+						</dict>
+						<key>WFSerializationType</key>
+						<string>WFTextTokenAttachment</string>
+					</dict>
+				</dict>
 			</dict>
 		</dict>
 		<dict>
@@ -298,12 +359,6 @@ Make sure to update Version every time you update your shortcut.</string>
 											<dict>
 												<key>Aggrandizements</key>
 												<array>
-													<dict>
-														<key>CoercionItemClass</key>
-														<string>WFDictionaryContentItem</string>
-														<key>Type</key>
-														<string>WFCoercionVariableAggrandizement</string>
-													</dict>
 													<dict>
 														<key>DictionaryKey</key>
 														<string>Version</string>
@@ -401,8 +456,6 @@ Make sure to update Version every time you update your shortcut.</string>
 						<dict>
 							<key>{393, 1}</key>
 							<dict>
-								<key>Aggrandizements</key>
-								<array/>
 								<key>OutputName</key>
 								<string>CompareVersionsData</string>
 								<key>OutputUUID</key>
@@ -441,6 +494,8 @@ document.write(cmp(data.current, data.new));
 			<string>is.workflow.actions.url</string>
 			<key>WFWorkflowActionParameters</key>
 			<dict>
+				<key>UUID</key>
+				<string>ACA278AE-F448-42C4-ACA2-78AEF44812C4</string>
 				<key>WFURLActionURL</key>
 				<dict>
 					<key>Value</key>
@@ -449,8 +504,6 @@ document.write(cmp(data.current, data.new));
 						<dict>
 							<key>{15, 1}</key>
 							<dict>
-								<key>Aggrandizements</key>
-								<array/>
 								<key>OutputName</key>
 								<string>CompareVersionsHTML</string>
 								<key>OutputUUID</key>
@@ -471,7 +524,32 @@ document.write(cmp(data.current, data.new));
 			<key>WFWorkflowActionIdentifier</key>
 			<string>is.workflow.actions.getwebpagecontents</string>
 			<key>WFWorkflowActionParameters</key>
-			<dict/>
+			<dict>
+				<key>UUID</key>
+				<string>6DF4E6EB-983E-47FA-ADF4-E6EB983E07FA</string>
+				<key>WFInput</key>
+				<dict>
+					<key>Value</key>
+					<dict>
+						<key>attachmentsByRange</key>
+						<dict>
+							<key>{0, 1}</key>
+							<dict>
+								<key>OutputName</key>
+								<string>URL</string>
+								<key>OutputUUID</key>
+								<string>ACA278AE-F448-42C4-ACA2-78AEF44812C4</string>
+								<key>Type</key>
+								<string>ActionOutput</string>
+							</dict>
+						</dict>
+						<key>string</key>
+						<string>￼</string>
+					</dict>
+					<key>WFSerializationType</key>
+					<string>WFTextTokenString</string>
+				</dict>
+			</dict>
 		</dict>
 		<dict>
 			<key>WFWorkflowActionIdentifier</key>
@@ -481,11 +559,32 @@ document.write(cmp(data.current, data.new));
 				<key>GroupingIdentifier</key>
 				<string>2a375365-c695-4f2d-acd2-f067b7c22102</string>
 				<key>WFCondition</key>
-				<string>Equals</string>
+				<integer>4</integer>
 				<key>WFConditionalActionString</key>
 				<string>NoChanges</string>
+				<key>WFConditionalLegacyComparisonBehavior</key>
+				<true/>
 				<key>WFControlFlowMode</key>
 				<integer>0</integer>
+				<key>WFInput</key>
+				<dict>
+					<key>Type</key>
+					<string>Variable</string>
+					<key>Variable</key>
+					<dict>
+						<key>Value</key>
+						<dict>
+							<key>OutputName</key>
+							<string>Contents of Web Page</string>
+							<key>OutputUUID</key>
+							<string>6DF4E6EB-983E-47FA-ADF4-E6EB983E07FA</string>
+							<key>Type</key>
+							<string>ActionOutput</string>
+						</dict>
+						<key>WFSerializationType</key>
+						<string>WFTextTokenAttachment</string>
+					</dict>
+				</dict>
 			</dict>
 		</dict>
 		<dict>
@@ -516,11 +615,32 @@ document.write(cmp(data.current, data.new));
 				<key>GroupingIdentifier</key>
 				<string>84d7084b-899d-4375-aa6f-f4efeeba8f5a</string>
 				<key>WFCondition</key>
-				<string>Equals</string>
+				<integer>4</integer>
 				<key>WFConditionalActionString</key>
 				<string>RollbackAvailable</string>
+				<key>WFConditionalLegacyComparisonBehavior</key>
+				<true/>
 				<key>WFControlFlowMode</key>
 				<integer>0</integer>
+				<key>WFInput</key>
+				<dict>
+					<key>Type</key>
+					<string>Variable</string>
+					<key>Variable</key>
+					<dict>
+						<key>Value</key>
+						<dict>
+							<key>OutputName</key>
+							<string>Contents of Web Page</string>
+							<key>OutputUUID</key>
+							<string>6DF4E6EB-983E-47FA-ADF4-E6EB983E07FA</string>
+							<key>Type</key>
+							<string>ActionOutput</string>
+						</dict>
+						<key>WFSerializationType</key>
+						<string>WFTextTokenAttachment</string>
+					</dict>
+				</dict>
 			</dict>
 		</dict>
 		<dict>
@@ -528,6 +648,8 @@ document.write(cmp(data.current, data.new));
 			<string>is.workflow.actions.gettext</string>
 			<key>WFWorkflowActionParameters</key>
 			<dict>
+				<key>UUID</key>
+				<string>EADA5516-5512-445B-BB64-6064907752B0</string>
 				<key>WFTextActionText</key>
 				<dict>
 					<key>Value</key>
@@ -605,6 +727,8 @@ document.write(cmp(data.current, data.new));
 			<string>is.workflow.actions.gettext</string>
 			<key>WFWorkflowActionParameters</key>
 			<dict>
+				<key>UUID</key>
+				<string>E9DE7401-2F19-482C-9D7B-7D5AF70F86C3</string>
 				<key>WFTextActionText</key>
 				<dict>
 					<key>Value</key>
@@ -671,8 +795,6 @@ document.write(cmp(data.current, data.new));
 			<string>is.workflow.actions.conditional</string>
 			<key>WFWorkflowActionParameters</key>
 			<dict>
-				<key>CustomOutputName</key>
-				<string>IfResult</string>
 				<key>GroupingIdentifier</key>
 				<string>84d7084b-899d-4375-aa6f-f4efeeba8f5a</string>
 				<key>UUID</key>
@@ -719,7 +841,7 @@ document.write(cmp(data.current, data.new));
 											</dict>
 										</array>
 										<key>OutputName</key>
-										<string>Remote</string>
+										<string>result</string>
 										<key>OutputUUID</key>
 										<string>a585622f-3b7c-4273-a3a5-771a5fbfba5a</string>
 										<key>Type</key>
@@ -735,6 +857,8 @@ document.write(cmp(data.current, data.new));
 					</dict>
 					<string>Later</string>
 				</array>
+				<key>WFMenuLegacyCancelBehavior</key>
+				<true/>
 				<key>WFMenuPrompt</key>
 				<dict>
 					<key>Value</key>
@@ -772,6 +896,42 @@ Update checking with [Eᴍʙᴇᴅ-ᴀ-Uᴘᴅᴀᴛᴇ]</string>
 				<string>e56435ea-b812-4d27-9395-3f15e1e4a3bb</string>
 				<key>WFControlFlowMode</key>
 				<integer>1</integer>
+				<key>WFMenuItemAttributedTitle</key>
+				<dict>
+					<key>attachmentsByRange</key>
+					<dict>
+						<key>{8, 1}</key>
+						<dict>
+							<key>Aggrandizements</key>
+							<array>
+								<dict>
+									<key>CoercionItemClass</key>
+									<string>WFDictionaryContentItem</string>
+									<key>Type</key>
+									<string>WFCoercionVariableAggrandizement</string>
+								</dict>
+								<dict>
+									<key>DictionaryKey</key>
+									<string>Version</string>
+									<key>Type</key>
+									<string>WFDictionaryValueVariableAggrandizement</string>
+								</dict>
+							</array>
+							<key>OutputName</key>
+							<string>result</string>
+							<key>OutputUUID</key>
+							<string>a585622f-3b7c-4273-a3a5-771a5fbfba5a</string>
+							<key>Type</key>
+							<string>ActionOutput</string>
+						</dict>
+					</dict>
+					<key>string</key>
+					<string>Install ￼</string>
+				</dict>
+				<key>WFMenuItemTitle</key>
+				<string>Install result (Version)</string>
+				<key>WFMenuLegacyCancelBehavior</key>
+				<true/>
 			</dict>
 		</dict>
 		<dict>
@@ -824,7 +984,43 @@ Update checking with [Eᴍʙᴇᴅ-ᴀ-Uᴘᴅᴀᴛᴇ]</string>
 			<key>WFWorkflowActionIdentifier</key>
 			<string>is.workflow.actions.openurl</string>
 			<key>WFWorkflowActionParameters</key>
-			<dict/>
+			<dict>
+				<key>WFInput</key>
+				<dict>
+					<key>Value</key>
+					<dict>
+						<key>OutputName</key>
+						<string>URL</string>
+						<key>OutputUUID</key>
+						<string>701D0E73-78AD-4D84-900B-886A2289E941</string>
+						<key>Type</key>
+						<string>ActionOutput</string>
+					</dict>
+					<key>WFSerializationType</key>
+					<string>WFTextTokenAttachment</string>
+				</dict>
+			</dict>
+		</dict>
+		<dict>
+			<key>WFWorkflowActionIdentifier</key>
+			<string>is.workflow.actions.exit</string>
+			<key>WFWorkflowActionParameters</key>
+			<dict>
+				<key>WFResult</key>
+				<dict>
+					<key>Value</key>
+					<dict>
+						<key>OutputName</key>
+						<string>URL</string>
+						<key>OutputUUID</key>
+						<string>701D0E73-78AD-4D84-900B-886A2289E941</string>
+						<key>Type</key>
+						<string>ActionOutput</string>
+					</dict>
+					<key>WFSerializationType</key>
+					<string>WFTextTokenAttachment</string>
+				</dict>
+			</dict>
 		</dict>
 		<dict>
 			<key>WFWorkflowActionIdentifier</key>
@@ -835,6 +1031,10 @@ Update checking with [Eᴍʙᴇᴅ-ᴀ-Uᴘᴅᴀᴛᴇ]</string>
 				<string>e56435ea-b812-4d27-9395-3f15e1e4a3bb</string>
 				<key>WFControlFlowMode</key>
 				<integer>1</integer>
+				<key>WFMenuItemTitle</key>
+				<string>Not now</string>
+				<key>WFMenuLegacyCancelBehavior</key>
+				<true/>
 			</dict>
 		</dict>
 		<dict>
@@ -848,6 +1048,8 @@ Update checking with [Eᴍʙᴇᴅ-ᴀ-Uᴘᴅᴀᴛᴇ]</string>
 				<string>625F426F-4CCC-4E06-96C3-1BF61AC90EF0</string>
 				<key>WFControlFlowMode</key>
 				<integer>2</integer>
+				<key>WFMenuLegacyCancelBehavior</key>
+				<true/>
 			</dict>
 		</dict>
 		<dict>
@@ -857,6 +1059,8 @@ Update checking with [Eᴍʙᴇᴅ-ᴀ-Uᴘᴅᴀᴛᴇ]</string>
 			<dict>
 				<key>GroupingIdentifier</key>
 				<string>2a375365-c695-4f2d-acd2-f067b7c22102</string>
+				<key>UUID</key>
+				<string>68BD8FD0-493C-4D2A-8BDC-53F7F8970751</string>
 				<key>WFControlFlowMode</key>
 				<integer>2</integer>
 			</dict>
@@ -877,6 +1081,8 @@ Update checking with [Eᴍʙᴇᴅ-ᴀ-Uᴘᴅᴀᴛᴇ]</string>
 			<string>is.workflow.actions.alert</string>
 			<key>WFWorkflowActionParameters</key>
 			<dict>
+				<key>WFAlertActionCancelButtonShown</key>
+				<false/>
 				<key>WFAlertActionMessage</key>
 				<dict>
 					<key>Value</key>
@@ -893,9 +1099,15 @@ Update checking with [Eᴍʙᴇᴅ-ᴀ-Uᴘᴅᴀᴛᴇ]</string>
 										<key>Type</key>
 										<string>WFCoercionVariableAggrandizement</string>
 									</dict>
+									<dict>
+										<key>DictionaryKey</key>
+										<string>message</string>
+										<key>Type</key>
+										<string>WFDictionaryValueVariableAggrandizement</string>
+									</dict>
 								</array>
 								<key>OutputName</key>
-								<string>Remote</string>
+								<string>result</string>
 								<key>OutputUUID</key>
 								<string>a585622f-3b7c-4273-a3a5-771a5fbfba5a</string>
 								<key>Type</key>
@@ -903,7 +1115,7 @@ Update checking with [Eᴍʙᴇᴅ-ᴀ-Uᴘᴅᴀᴛᴇ]</string>
 							</dict>
 						</dict>
 						<key>string</key>
-						<string>Could not check for updates because of a routinehub error:
+						<string>Could not check for updates because of a RoutineHub error:
 
 ￼</string>
 					</dict>
@@ -911,7 +1123,7 @@ Update checking with [Eᴍʙᴇᴅ-ᴀ-Uᴘᴅᴀᴛᴇ]</string>
 					<string>WFTextTokenString</string>
 				</dict>
 				<key>WFAlertActionTitle</key>
-				<string>[Eᴍʙᴇᴅ-ᴀ-Uᴘᴅᴀᴛᴇ]</string>
+				<string></string>
 			</dict>
 		</dict>
 		<dict>
@@ -921,6 +1133,8 @@ Update checking with [Eᴍʙᴇᴅ-ᴀ-Uᴘᴅᴀᴛᴇ]</string>
 			<dict>
 				<key>GroupingIdentifier</key>
 				<string>0db09b8a-edc4-4bad-9a6b-8ece302669a0</string>
+				<key>UUID</key>
+				<string>E69BD5AB-B22E-46D6-A322-9B88EDD4E036</string>
 				<key>WFControlFlowMode</key>
 				<integer>2</integer>
 			</dict>
@@ -931,9 +1145,9 @@ Update checking with [Eᴍʙᴇᴅ-ᴀ-Uᴘᴅᴀᴛᴇ]</string>
 			<key>WFWorkflowActionParameters</key>
 			<dict>
 				<key>GroupingIdentifier</key>
-				<string>a8bf81ea-8943-4228-adbd-6cfb55014f93</string>
+				<string>1FA8C12A-34A0-4532-9ED0-831E2194E517</string>
 				<key>UUID</key>
-				<string>9701CE37-B068-4A0D-B7A7-37C914093E12</string>
+				<string>BB2C15DE-BBD7-423B-8CFC-246203F4D730</string>
 				<key>WFControlFlowMode</key>
 				<integer>2</integer>
 			</dict>
@@ -944,7 +1158,9 @@ Update checking with [Eᴍʙᴇᴅ-ᴀ-Uᴘᴅᴀᴛᴇ]</string>
 			<key>WFWorkflowActionParameters</key>
 			<dict>
 				<key>GroupingIdentifier</key>
-				<string>94647DA5-5276-4CCA-8316-9AD497879229</string>
+				<string>01E84062-ADCC-4D52-8225-00AE8B0DBCF4</string>
+				<key>UUID</key>
+				<string>1B1AF40A-431D-4DDD-859A-0C7C948F144A</string>
 				<key>WFControlFlowMode</key>
 				<integer>2</integer>
 			</dict>
